fixed issue of owl-dots being too tall

--- a/css/ft-projects.css
+++ b/css/ft-projects.css
@@ -100,6 +100,8 @@
 #ft-projects .owl-dot {
   position: relative;
   top: 50px;
+  height: 20px;
+  /* background-color: khaki; */
 }
 
 #ft-projects .title {
@@ -199,7 +201,7 @@ body.dark #ft-projects .title a {
   }
 
   #ft-projects .owl-dot {
-    margin-top: -230px;
+    margin-top: -120px;
   }
 
   #ft-projects .owl-dot {
